--- a/docs/style.css
+++ b/docs/style.css
@@ -12,3 +12,20 @@ pre {
 pre code {
   white-space: inherit;
 }
+
+
+
+
+div.example {
+    padding: 1em;
+    margin: 1em 0;
+    padding-left: 100px;
+    background-size: 70px;
+    background-repeat: no-repeat;
+    background-position: 15px center;
+    min-height: 120px;
+    background-color: #bed3ec;
+    background-image: url("icons/lightbulb.png");
+  }
+  
+  
